Sync local changes with github after huge refactoring

--- a/config/application.properties
+++ b/config/application.properties
@@ -1,21 +1,42 @@
-# Configuration for UML Diagram Generator
 
+# Configuration for UML Diagram Generator
 # Directory containing Java source files
 # Absolute (full) path to your src/main/java directory
-input.directory=./input
+input.uml.directory=./input
+
+# Directory containing library files if you want to resolve dependencies and want to add them in diagram (not mandatroy)
+libs.dirpath=./input/libs
 
 # Directory to save generated UML diagrams
-output.directory=./output
-
-# Filter the diagram to project files that excludes library and primitive types from the diagram
-# It helps in avoiding the clutter
-include.package=com.pjsoft.fms
-
+output.uml.directory=./umldoc
 # Types of diagrams to generate (comma-separated)
 diagram.types=class,sequence
+# Filter the diagram to project files that excludes library and primitive types from the diagram
+# It helps in avoiding the clutter
+include.package=com.pjsoft
+output.uml.puml=./umldoc/puml
+output.uml.images=./umldoc/images
+output.uml.unified.classdiagram=UnifiedClassDiagram.puml
 
-# Define path to style sheets. Three themes are supported.
-style.dark=styles/style_dark.css
-style.light=styles/style_light.css
-style.pastel=styles/style_pastel.css
-style.common=styles/style_common.css
+# Configuration for JavaDoc Generation
+# Directory containing Java source files for javadoc
+input.javadoc.directory=./input
+# Directory to save javadoc files. Here html files will be stored. 
+output.javadoc.directory=./javadoc
+# In output directory application should create puml directory, if it not already exists a directory for storing puml files.
+# In output directory application should create a styles directory to copy css file from classpath.
+# In output directory application should create images directory to store generated diagram images
+output.javadoc.html=./javadoc/html
+output.javadoc.styles=./javadoc/html/styles/style_javadoc.css
+output.javadoc.images=./javadoc/html/images
+output.javadoc.puml=./javadoc/puml
+
+# Configuration for HTML Diagram Generator
+# Directory containing puml files for htmldoc
+input.htmldoc.directory=./umldoc/puml
+# Directory to save htmldoc files
+output.htmldoc.directory=./htmldoc
+
+
+
+
